Add hotkey for toggling the tabs sidebar

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -27,6 +27,15 @@
 		]
 	},
 
+	"commands": {
+		"_execute_sidebar_action": {
+			"suggested_key": {
+				"default": "F1"
+			},
+			"description": "Toggle sidebar"
+		}
+	},
+
 	"options_ui": {
 		"page": "options.html"
 	},
