--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
 	, "applications": {
 		"gecko": {
 			"id": "{8d808887-ed13-4931-9f5a-4c0bff979a5a}"
-			, "strict_min_version": "59.0a1"
+			, "strict_min_version": "67.0"
 		}
 	},
 
