--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2
 	, "name": "ftt"
-	, "description": "A tree tab addon"
+	, "description": "A tab tree addon"
 	, "version": "0.2.9"
 
 	, "applications": {
